--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,11 +36,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --doctest-modules --junitxml=junit/test-results-3.10.xml
+        pytest --junitxml=junit/test-results.xml
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
-        name: pytest-results-3.10
-        path: junit/test-results-3.10.xml
+        name: pytest-results
+        path: junit/test-results.xml
 
 
