--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,8 @@ jobs:
       with:
         name: pytest-results
         path: report_localhost.html
+        artifact-content-type: text/html
+
 
 
 
