--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,7 @@ jobs:
       with:
         name: pytest-results
         path: report_localhost.html
+        retain-on-upload: false
         artifact-content-type: text/html
 
 
