--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,12 +38,25 @@ jobs:
       run: |
         pytest --html=report_localhost.html --cov=com --cov-report=html
     - name: Upload pytest test results
-      uses: actions/upload-artifact@v3
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: report.sarif
+    - name: Convert SARIF to HTML
+      run: npx sarif-web-component report.sarif -o report.html
+    - name: Upload pytest test results
+      uses: actions/upload-artifact@v2
       with:
         name: pytest-results
-        path: report_localhost.html
-        retain-on-upload: false
-        artifact-content-type: text/html
+        path: report.html
+
+
+#     - name: Upload pytest test results
+#       uses: actions/upload-artifact@v3
+#       with:
+#         name: pytest-results
+#         path: report_localhost.html
+#         retain-on-upload: false
+#         artifact-content-type: text/html
 
 
 
