--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --html=tests_report.html \
-         --cov=./test_BlockBase.py ./
+         --cov=./ ./
         coverage html -d coverage_report/
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
