--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Python Arcanoid Lab 
 
 on:
   push:
@@ -26,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-html pytest-cov
+        pip install flake8 flake8-html pytest pytest-html pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -34,6 +31,12 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --format=html --htmldir=lint-report 
+    - name: Upload lint report
+      uses: actions/upload-artifact@v3
+      with:
+        name: lint-report 
+        path: lint-report.html
     - name: Test with pytest
       run: |
         pytest --html=tests_report.html \
@@ -44,8 +47,6 @@ jobs:
       with:
         name: pytest-results
         path: tests_report.html
-        retain-on-upload: false
-        artifact-content-type: text/html
     - name: Upload coverage report
       uses: actions/upload-artifact@v3
       with:
