--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         # generate report
-        flake8 --format=html --htmldir=lint-report ./ --verbose
+        flake8 . --format=html --htmldir=lint-report --exit-zero
     - name: Upload lint report
       uses: actions/upload-artifact@v3
       with:
